--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <body>
         <h2>this is a heading2</h2>
         <p>click on the paragraph button</p>
-        <a href="https://search.brave.com/search?q=google+.com&source=desktop">google</a>
+        <a href="https://search.brave.com/search?q=google+.com&source=desktop">google</a><br>
+        <img src="https://imgs.search.brave.com/B_d9HLlI7FIHT1rJ4q8aRahBw09cIcZMiFGZP4EUzPc/rs:fit:500:0:0/g:ce/aHR0cHM6Ly9tLm1l/ZGlhLWFtYXpvbi5j/b20vaW1hZ2VzL00v/TVY1Qk16TXdZV1pr/WmpjdFpUVTVOeTAw/TUROaUxUbGtNbVl0/TnpreU9ETXdNR1V4/WXpBMlhrRXlYa0Zx/Y0dkZVFYVnlOelUx/TnpFM05UZ0AuanBn">
+        
     </body>
 </html>
